--- a/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import AggregationExample from '../../../examples/aggregation-and-grouping';
@@ -19,9 +19,9 @@ import AggregationMultiExample from '../../../examples/aggregation-multi';
 
 Mantine React Table has built-in grouping and aggregation features. There are options for both automatic client-side grouping and aggregation, as well as manual server-side grouping and aggregation. This guide will walk you through the different options and how to use and customize them.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'aggregationFns',
