--- a/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import Example from '../../../examples/disable-column-hiding';
@@ -16,9 +16,9 @@ import Example from '../../../examples/disable-column-hiding';
 
 The column hiding feature is enabled by default and allows the user to hide data columns from either the column actions menu or the columns menu.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={new Set(['enableHiding', 'onColumnVisibilityChange'])}
 />
 
