--- a/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import Example from '../../../examples/font-awesome-icons';
 
 <Head>
@@ -16,9 +16,9 @@ Mantine React Table uses [Tabler Icons](https://tabler-icons.io/) by default for
 
 If you need to, you can customize and replace some or all of the icons with your own custom icons. You can either use other Tabler Icons or icons from a completely different library.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable onlyOptions={new Set(['icons'])} />
+<TableOptionsTable onlyOptions={new Set(['icons'])} />
 
 ### Replace with Custom Icons
 
