--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import ThemeExample from '../../../examples/mantine-theme';
 import CustomizeStylesExample from '../../../examples/customize-table-styles';
@@ -21,11 +21,11 @@ One of the strengths of Mantine React Table is that it exposes a majority of all
 
 Additionally, in one of the sections below, you will learn [how to customize and use the Mantine Theme](#mantine-theme) to customize colors, typography, or any other default CSS that is used by Mantine React Table.
 
-### Relevant Props
+### Relevant Table Options
 
 All props labeled `mantine...Props` get forwarded to Mantine components. Here is a list of all the props that are exposed in both the root props and column options.
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'mantineBottomToolbarProps',
