--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import LocaleExamples from '../../../example-groups/LocaleExamples';
 
 <Head>
@@ -14,9 +14,9 @@ import LocaleExamples from '../../../example-groups/LocaleExamples';
 
 Mantine React Table has full support for localization (i18n). Some locales are included by default, but if your language is not yet supported, you can still easily add your own custom translations to the `localization` prop.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable onlyOptions={new Set(['localization'])} />
+<TableOptionsTable onlyOptions={new Set(['localization'])} />
 
 ### Built-in Locales
 
