--- a/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import OriginalExample from '../../../examples/enable-row-numbers-original';
 import StaticExample from '../../../examples/enable-row-numbers-static';
 
@@ -15,9 +15,9 @@ import StaticExample from '../../../examples/enable-row-numbers-static';
 
 Mantine React Table has an easy to implement row number features. There are two row number modes that you can enable. You can have row numbers that are associated with the data in the table ([original mode](<#enable-row-numbers-(original-mode)>)), or you can have row numbers that are just statically part of the table ([static mode](<#enable-row-numbers-(static-mode)>)).
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable onlyOptions={new Set(['enableRowNumbers', 'rowNumberMode'])} />
+<TableOptionsTable onlyOptions={new Set(['enableRowNumbers', 'rowNumberMode'])} />
 
 ### Enable Row Numbers (Original Mode)
 
