--- a/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import EnableOrderingExample from '../../../examples/enable-row-ordering';
 import EnableDraggingExample from '../../../examples/enable-row-dragging';
@@ -18,9 +18,9 @@ Mantine React Table has exposes all the APIs necessary to enable rich row drag a
 
 > This is not the [Sorting Guide](/docs/guides/sorting) which is a different feature.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'enableRowOrdering',
