--- a/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import EnableExample from '../../../examples/enable-sticky-header';
 
 <Head>
@@ -14,9 +14,9 @@ import EnableExample from '../../../examples/enable-sticky-header';
 
 The sticky header and footer feature allows you to keep the header and footer of the table visible while scrolling through the table. This is useful when you have a large table and want to keep the header and footer visible at all times.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={new Set(['enableStickyHeader', 'enableStickyFooter'])}
 />
 
