--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import DisableExample from '../../../examples/minimal';
 import CustomTopToolbarExample from '../../../examples/custom-top-toolbar';
@@ -17,9 +17,9 @@ import ExternalExample from '../../../examples/external-toolbar';
 
 This guide shows you how to [hide](#hide-or-disable-toolbars), [customize](#customize-toolbar-buttons), or [override](#override-with-custom-toolbar-components) the top and bottom toolbars in Mantine React Table.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'enableBottomToolbar',
