--- a/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import Example from '../../../examples/enable-click-to-copy';
 
@@ -15,9 +15,9 @@ import Example from '../../../examples/enable-click-to-copy';
 
 Mantine React Table has an easy-to-implement feature that allows a user to copy a cell's value to the clipboard.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={new Set(['enableClickToCopy', 'mantineCopyButtonProps'])}
 />
 
