--- a/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import DisableExample from '../../../examples/disable-column-actions';
 import ColumnActionsSpaceExample from '../../../examples/column-actions-space';
@@ -16,9 +16,9 @@ import ColumnActionsSpaceExample from '../../../examples/column-actions-space';
 
 By default, Mantine React Table renders a column actions button for each column header. It contains a drop-down menu to help your users use the other features of the table. All of these actions can be triggered in some other way other than from this drop-down menu, so this serves as a UI/UX alternative to make sure your users can find many of the table features easily.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'enableColumnActions',
