--- a/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import DNDExample from '../../../examples/enable-column-ordering';
@@ -16,9 +16,9 @@ import DNDExample from '../../../examples/enable-column-ordering';
 
 Whether you just want to change the default column order in your table or let columns be reordered by dragging and dropping, Mantine React Table has a simple API for this.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'enableColumnDragging',
