--- a/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import Example from '../../../examples/enable-detail-panel';
 import AlternateExample from '../../../examples/alternate-detail-panel';
@@ -20,9 +20,9 @@ Mantine React Table has multiple kinds of expanding features. This guide will sh
 
 If you are looking for how to expand multiple rows from a tree data structure, see the [Expanding Sub-Rows](/docs/guides/expanding-sub-rows) guide.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'displayColumnDefOptions',
