--- a/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import RemoteExample from '../../../examples/remote';
 
@@ -15,9 +15,9 @@ import RemoteExample from '../../../examples/remote';
 
 Client-side pagination is enabled by default in Mantine React Table. There are a number of ways to customize pagination, turn off pagination, or completely replace the built in pagination with your own manual or server-side pagination logic.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'autoResetPagination',
