--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import EnableExample from '../../../examples/enable-row-selection';
 import SingleExample from '../../../examples/single-row-selection';
@@ -18,9 +18,9 @@ import CustomizeExample from '../../../examples/customize-row-selection';
 
 Mantine React Table has a built-in row-selection feature and makes it easy to manage the selection state yourself. This guide will walk you through how to enable row selection and how to customize the selection behavior.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={
     new Set([
       'enableMultiRowSelection',
