--- a/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
+import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import RowSelectionExample from '../../../examples/enable-row-selection';
 import PersistentStateExample from '../../../examples/persistent-state';
 
@@ -19,9 +19,9 @@ This is all optional, of course. If you do not need access to any of the state, 
 
 See the [State Options API Docs](/docs/api/state-options) for more information on which states are available for you to manage.
 
-### Relevant Props
+### Relevant Table Options
 
-<TableOptionTable
+<TableOptionsTable
   onlyOptions={new Set(['initialState', 'state', 'tableInstanceRef'])}
 />
 
