new autocomplete and range-slider filter variants

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,16 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.14
+
+- New `'autocomplete'` and `'range-slider'` filterVariants
+- Fully implement faceted values feature to be used for filter variants
+- Replaced internal Mantine Chip components with Mantine Badge components
+
+#### V1.0.0-beta.13
+
+- Gave proper `TData` generics to all MRT components
+
 #### V1.0.0-beta.12
 
 - New `useMantineReactTable` hook to replace `tableInstanceRef` prop (more to come on this)
