--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -6,6 +6,7 @@ import DisableExample from '../../../examples/disable-column-filters';
 import CustomizeFilterVariantsExample from '../../../examples/customize-filter-variants';
 import CustomizeFilterModesExample from '../../../examples/customize-filter-modes';
 import CustomizeFilterComponentsExample from '../../../examples/customize-filter-components';
+import EnableColumnFacetValuesExample from '../../../examples/enable-filter-facet-values';
 import RemoteExample from '../../../examples/remote';
 
 <Head>
@@ -67,7 +68,9 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
 ### Relevant State Options
 
 <StateOptionsTable
-  onlyOptions={new Set(['columnFilters', 'columnFilterFns', 'showColumnFilters'])}
+  onlyOptions={
+    new Set(['columnFilters', 'columnFilterFns', 'showColumnFilters'])
+  }
 />
 
 ### Disable Filtering Features
@@ -111,14 +114,45 @@ This feature can be disabled by setting the `enableFilterMatchHighlighting` prop
 Mantine React Table has several built-in filter variants for advanced filtering. These can be specified on a per-column basis using the `filterVariant` option. The following variants are available:
 
 - `'text'` - shows the default text field
-- `'select'` - shows a select dropdown with the options specified in `mantineFilterSelectProps.data` array.
-- `'multi-select'` - shows a select dropdown with the options specified in `mantineFilterMultiSelectProps.data` and allows multiple selections with checkboxes
+- `'autocomplete'` - shows an autocomplete text field with the options from faceted values or specified in `mantineFilterAutocompleteProps.data` array.
+- `'select'` - shows a select dropdown with the options from faceted values or specified in `mantineFilterSelectProps.data` array.
+- `'multi-select'` - shows a select dropdown with the options from faceted values or specified in `mantineFilterMultiSelectProps.data` and allows multiple selections with checkboxes
 - `'range'` - shows min and max text fields for filtering a range of values
-- `'checkbox'` - shows a checkbox for filtering by `'true'` or `'false'` values
+- `'range-slider'` - shows a slider for filtering a range of values
 - `'date'` - shows a date picker for filtering by date values
 - `'date-range'` - shows a date range picker for filtering by date ranges
+- `'checkbox'` - shows a checkbox for filtering by `'true'` or `'false'` values
 
 <CustomizeFilterVariantsExample />
+
+#### Faceted Values for Filter Variants
+
+Faceted values are a list of unique values for a column that gets generated under the hood from table data when the `enableFacetedValues` prop is set to `true`. These values can be used to populate the autocomplete suggestions, select dropdowns, or the min and max values for the `'range-slider'` variant. This means that you no longer need to manually specify the filter select `data` props for these variants manually, especially if you are using client-side filtering.
+
+<EnableColumnFacetValuesExample />
+
+#### Custom Faceted Values
+
+If you are using server-side pagination and filtering, you can still customize the faceted values output with the `getFacetedUniqueValues` and `getFacetedMinMaxValues` props.
+
+```tsx
+<MaterialReactTable
+  columns={columns}
+  data={data}
+  enableFacetedValues={true}
+  //if using server-side pagination and filtering
+  getFacetedMinMaxValues={(table) => {
+    //fetch min and max values from server
+    return [minValue, maxValue];
+  }}
+  //if using server-side filtering
+  getFacetedUniqueValues={(table) => {
+    const uniqueValueMap = new Map<string, number>();
+    //fetch unique values from server, ideally including the count of each unique value
+    return uniqueValueMap;
+  }}
+/>
+```
 
 ### Custom Filter Functions
 
