make install page better

--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -1,4 +1,5 @@
 import Head from 'next/head';
+import { InstallCommand } from '../../../components/mdx/InstallCommand';
 import { FAQs } from '../../../components/mdx/FAQs';
 
 <Head>
@@ -30,43 +31,11 @@ If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas
 
 ### Quick Install
 
-NPM
-
-```bash
-npm install mantine-react-table
-```
-
-PNPM
-
-```bash
-pnpm add mantine-react-table
-```
-
-Yarn
-
-```bash
-yarn add mantine-react-table
-```
+<InstallCommand packagesString="mantine-react-table" />
 
 ### Install With Required Peer Dependencies (Recommended)
 
-NPM
-
-```bash
-npm install mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
-```
-
-PNPM
-
-```bash
-pnpm add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
-```
-
-Yarn
-
-```bash
-yarn add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
-```
+<InstallCommand />
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`, and must use an exact version already specified internally.
 >
