beta 18 - revert optional icons experiment. bump required tabler icons version

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.18
+
+- Revert `@tabler/react-icons` as an optional peer dependency. Now required again with a minimum version of `2.23.0`
+
 #### V1.0.0-beta.17
 
 - exported new `MRT_FlexRender` function as a utility to help with custom headless ui renders
