--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -24,7 +24,7 @@ If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas
 > 1.  `@mantine/core` (v6.0+)
 > 2.  `@mantine/hooks` (v6.0+)
 > 3.  `@mantine/dates` (v6.0+)
-> 4.  `@tabler/icons-react` (v2)
+> 4.  `@tabler/icons-react` (2.23.0+)
 > 5.  `@emotion/react` (v11)
 > 6.  `dayjs` (v1.11+)
 > 7.  `react` and `react-dom` (v17 or v18)
@@ -52,7 +52,11 @@ You likely forgot to export your component from the file it's defined in,
 or you might have mixed up default and named imports.
 ```
 
-You probably do not have the correct version of Mantine installed. Make sure all mantine packages are at least v5.7.0.
+You probably do not have the correct version of Mantine or Tabler Icons installed. 
+
+Make sure all mantine packages are at least v6.
+
+Make sure that the `@tabler/icons-react` package is at least v2.23.0.
 
 If you are using an older version of `webpack` or `create-react-app` and get an error like this:
 
