upgrade package versions

--- a/apps/mantine-react-table-docs/pages/docs/examples/minimal.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/minimal.mdx
@@ -23,7 +23,7 @@ Mantine React Table gives you a lot out of the box, but it's also easy to turn o
 
 Every feature has an `enable...` prop that let's you turn it on or off.
 
-For example, you can turn off sorting or hide the top or bottom toolbars if you want.
+Also, you can choose to not import the entire `<MantineReactTable />` component and instead import a smaller sub-component like `<MRT_TableContainer />` or `<MRT_Table />`. These imports do not include all of the extra toolbar components and only include the React code for the table itself.
 
 <Example />
 
