--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -126,7 +126,7 @@ Each `mantine...Prop` has multiple options for you to add styling to the compone
 
 The recommended way to style Mantine components in Mantine React Table will be the [`sx` prop](https://mantine.dev/styles/sx/) throughout this docs site, as it is both the most simple and the most powerful way to style Mantine components. They can work and be as simple as a `style` prop, but behind the scenes, they work more like emotion styled-components by using Emotion.
 
-Don't worry, `className` and `style` props will still work, but let's show off some of the more elegant syntax you can use with the `sx` prop.
+Do not worry, `className` and `style` props will still work, but let's show off some of the more elegant syntax you can use with the `sx` prop.
 
 1. The `sx` prop can be used just a simply as a `style` prop by default
 
