--- a/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
@@ -75,7 +75,7 @@ Take a look at the example below with 500 columns!
 
 <EnableColumnExample />
 
-> WARNING: Don't enable row or column virtualization conditionally. It may break React's Rule of Hooks, and/or cause other UI jumpiness.
+> WARNING: Do NOT enable row or column virtualization conditionally. It may break React's Rule of Hooks, and/or cause other UI jumpiness.
 
 ### Virtualization Side Effects
 
