--- a/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
@@ -2,6 +2,7 @@ import Head from 'next/head';
 import TableOptionsTable from '../../../components/prop-tables/TableOptionsTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import DisableExample from '../../../examples/disable-column-actions';
+import CustomColumnActionsExample from '../../../examples/custom-column-actions';
 import ColumnActionsSpaceExample from '../../../examples/column-actions-space';
 
 <Head>
@@ -54,51 +55,33 @@ In this demo, we disable the column actions button for the 'ID' column.
 
 <DisableExample />
 
+### Custom Column Actions Menu
+
+If you do not like the default column actions menu items that Mantine React Table generates, you can provide your own custom menu items with the `renderColumnActionsMenuItems` option.
+
+```jsx
+const table = useMantineReactTable({
+  data,
+  columns,
+  renderColumnActionsMenuItems: ({ internalColumnMenuItems }) => (
+    <>
+      {internalColumnMenuItems} //optionally include the default menu items
+      <Divider />
+      <Menu.Item>Item 1</Menu.Item>
+      <Menu.Item>Item 2</Menu.Item>
+    </>
+  ),
+});
+
+return <MantineReactTable table={table} />;
+```
+
+<CustomColumnActionsExample />
+
 ### Justify Column Actions Button
 
 By default, the column actions button is left aligned directly after the column header text and any sort or filter labels that may be present. If you want to change this, you can use a CSS selector in `mantineTableHeadCellProps` to change the `justify-content` property of the column header container.
 
 <ColumnActionsSpaceExample />
-
-### Custom Column Actions Menu
-
-If you do not like the default column actions menu items that Mantine React Table generates, you can provide your own custom menu items with the `renderColumnActionsMenuItems` prop. x of the column in the table.
-
-```tsx
-const columns = [
-  {
-    accessorKey: 'salary',
-    header: 'Salary',
-    renderColumnActionsMenuItems: ({ closeMenu, column, table }) => {
-      return [
-        <MenuItem
-          onClick={() => {
-            // do something
-            closeMenu();
-          }}
-        >
-          Custom Menu Item 1
-        </MenuItem>,
-        <MenuItem
-          onClick={() => {
-            // do something
-            closeMenu();
-          }}
-        >
-          Custom Menu Item 2
-        </MenuItem>,
-      ];
-    },
-  },
-];
-
-return (
-  <MantineReactTable
-    data={data}
-    columns={columns}
-    //renderColumnActionsMenuItems could go here if you want to apply it to all columns
-  />
-);
-```
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/features-column-action-examples)**
